--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,13 +18,22 @@ spring:
       hibernate:
         format_sql: true
     show-sql: true
+  datasource:
+    hikari:
+      connection-timeout: 30000  # 커넥션 타임아웃 설정 (ms)
+      maximum-pool-size: 10  # 커넥션 풀의 최대 크기 설정
+      minimum-idle: 5  # 유휴 커넥션을 유지할 최소한의 커넥션 수 설정
+      idle-timeout: 600000  # 유휴 커넥션의 최대 유지 시간 설정 (ms)
+      pool-name: MyHikariCP  # 커넥션 풀의 이름 설정
+      validation-timeout: 5000  # 커넥션 유효성 검사 타임아웃 설정 (ms)
+      auto-commit: true  # 자동 커밋 모드 설정
 server:
   port: 7070
   servlet:
     session:
       timeout: 600
 db:
-  url: jdbc:mysql://localhost:3306/db200412345
-  username: ab200412345
+  url: jdbc:mysql://localhost:3306/db_b200412345
+  username: b200412345
   password: cometrue
   driver-class-name: com.mysql.cj.jdbc.Driver
